<resources>
    <string name="app_name">FirendsV2</string>
    <string name="title_activity_friend_detail">FriendDetail</string>

    <string name="friend_detail">Details</string>
    <string name="friend_text">SMS</string>
    <string name="friend_call">call</string>
    <string name="friend_mail">Email</string>
    <string name="friend_web">Website</string>

    <string name="friend_detail_image">profile image</string>

    <string name="friend_meta_name">Name</string>
    <string name="friend_meta_phone">Phone</string>
    <string name="friend_mete_email">Email</string>
    <string name="friend_meta_website">Website</string>
    <string name="friend_meta_address">Address</string>
    <string name="friend_meta_birthday">Birthday</string>

    <string name="friend_picture">Take Picture</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="friend_edit_location">Set Home Location</string>
    <string name="title_activity_maps">Map</string>
</resources>
